# weather-tg

./: .env.example  LICENSE  README.md  pyproject.toml
src/: bot.py  config.py  weather.py
