[tool.poetry]
name = "weather-tg"
version = "0.1.0"
description = ""
authors = ["sxw111 <sxw9sxw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.1"
httpx = "^0.27.2"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
